--- a/Doctor/Doctor.csproj
+++ b/Doctor/Doctor.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Search.xaml.cs">
       <DependentUpon>Search.xaml</DependentUpon>
     </Compile>
+    <Compile Include="Service\TimeHelper.cs" />
     <Compile Include="Service\WebApiService.cs" />
     <Compile Include="YpExplain.xaml.cs">
       <DependentUpon>YpExplain.xaml</DependentUpon>
