--- a/Doctor/packages.config
+++ b/Doctor/packages.config
@@ -1,5 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="log4net" version="2.0.8" targetFramework="net40" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net40" />
   <package id="NLog" version="4.7.3" targetFramework="net40" />
   <package id="SuperSocket.ClientEngine" version="0.10.0" targetFramework="net40" />
