--- a/Doctor/Doctor.csproj
+++ b/Doctor/Doctor.csproj
@@ -48,6 +48,9 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <ApplicationIcon>logo.ico</ApplicationIcon>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
       <HintPath>..\packages\log4net.2.0.8\lib\net40-full\log4net.dll</HintPath>
@@ -99,6 +102,7 @@
     <Compile Include="Model\Disease.cs" />
     <Compile Include="Model\DrugKnowledageBase.cs" />
     <Compile Include="Model\QueryDiseaseBySymptomParams.cs" />
+    <Compile Include="Service\CommonHelper.cs" />
     <Compile Include="Service\HttpHelper.cs" />
     <Compile Include="Model\WSocketClient.cs" />
     <Compile Include="Model\PatientInfo.cs" />
@@ -123,6 +127,10 @@
     <Compile Include="Service\TimeHelper.cs" />
     <Compile Include="Service\TokenHelper.cs" />
     <Compile Include="Service\WebApiService.cs" />
+    <Compile Include="Service\WindowsHelper.cs" />
+    <Compile Include="SuspensionWindow.xaml.cs">
+      <DependentUpon>SuspensionWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="YpExplain.xaml.cs">
       <DependentUpon>YpExplain.xaml</DependentUpon>
     </Compile>
@@ -152,6 +160,10 @@
     <Page Include="Search.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
+    </Page>
+    <Page Include="SuspensionWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
     </Page>
     <Page Include="YpExplain.xaml">
       <Generator>MSBuild:Compile</Generator>
@@ -264,6 +276,8 @@
       <Install>false</Install>
     </BootstrapperPackage>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Resource Include="logo.ico" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
