修改了一些bug

--- a/Doctor/App.config
+++ b/Doctor/App.config
@@ -33,8 +33,10 @@
   </log4net>
 
   <appSettings>
-
-    <add key="WebSocketUrl" value="ws://103.85.170.99:10001/his/doctor/websocket/" />
+    <!--WebSocket服务地址-->
+    <add key="WebSocketUrl" value="ws://103.85.170.99:10001" />
+    <!--API地址-->
+    <add key="ApiUrl" value="http://103.85.170.99:10001" />
 
   </appSettings>
 
