--- a/Doctor/App.config
+++ b/Doctor/App.config
@@ -1,43 +1,43 @@
-﻿<?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <configuration>
 
 
   <configSections>
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net" />
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net"/>
   </configSections>
 
   <log4net>
     <!--Log4net 输出日志 定义输出到文件中-->
     <appender name="RollingLogFileAppender" type="log4net.Appender.RollingFileAppender">
       <!--日志路径-->
-      <param name="File" value="Log/" />
+      <param name="File" value="Log/"/>
       <!--是否是向文件中追加日志-->
-      <param name="AppendToFile" value="true" />
+      <param name="AppendToFile" value="true"/>
       <!--log保留天数-->
-      <param name="MaxSizeRollBackups" value="10" />
+      <param name="MaxSizeRollBackups" value="10"/>
       <!--日志文件名是否是固定不变的-->
-      <param name="StaticLogFileName" value="false" />
+      <param name="StaticLogFileName" value="false"/>
       <!--日志文件名格式为:Logs_2008-08-31.log-->
-      <param name="DatePattern" value="&quot;Logs_&quot;yyyy-MM-dd&quot;.log&quot;" />
+      <param name="DatePattern" value="&quot;Logs_&quot;yyyy-MM-dd&quot;.log&quot;"/>
       <!--日志根据日期滚动-->
-      <param name="RollingStyle" value="Date" />
+      <param name="RollingStyle" value="Date"/>
       <layout type="log4net.Layout.PatternLayout">
-        <param name="ConversionPattern" value="%d [%t] %-5p %c %n %m%n" />
+        <param name="ConversionPattern" value="%d [%t] %-5p %c %n %m%n"/>
       </layout>
     </appender>
     <root>
       <!--(高) OFF > FATAL > ERROR > WARN > INFO > DEBUG > ALL (低) -->
-      <level value="all" />
-      <appender-ref ref="RollingLogFileAppender" />
+      <level value="all"/>
+      <appender-ref ref="RollingLogFileAppender"/>
     </root>
   </log4net>
 
   <appSettings>
     <!--WebSocket服务地址-->
-    <add key="WebSocketUrl" value="ws://103.85.170.99:10001" />
+    <add key="WebSocketUrl" value="ws://103.85.170.99:10001"/>
     <!--API地址-->
-    <add key="ApiUrl" value="http://103.85.170.99:10001" />
+    <add key="ApiUrl" value="http://103.85.170.99:10001"/>
 
   </appSettings>
 
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2"/></startup></configuration>
