修改了一些bug

--- a/Doctor/packages.config
+++ b/Doctor/packages.config
@@ -1,12 +1,10 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="AutoCompleteTextBox" version="1.1.1" targetFramework="net452" />
-  <package id="log4net" version="2.0.8" targetFramework="net40" requireReinstallation="true" />
-  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net40" requireReinstallation="true" />
-  <package id="SuperSocket.ClientEngine" version="0.10.0" targetFramework="net40" requireReinstallation="true" />
-  <package id="SuperSocket.ClientEngine.Core" version="0.10.0" targetFramework="net40" requireReinstallation="true" />
-  <package id="SuperSocket.ProtoBase" version="1.7.0.17" targetFramework="net40" requireReinstallation="true" />
-  <package id="Syncfusion.Licensing" version="18.2.0.54" targetFramework="net452" />
-  <package id="Syncfusion.SfShared.WPF" version="18.2.0.54" targetFramework="net452" />
-  <package id="WebSocket4Net" version="0.15.2" targetFramework="net40" requireReinstallation="true" />
+  <package id="log4net" version="2.0.8" targetFramework="net40" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net40" />
+  <package id="SuperSocket.ClientEngine" version="0.10.0" targetFramework="net40" />
+  <package id="SuperSocket.ClientEngine.Core" version="0.10.0" targetFramework="net40" />
+  <package id="SuperSocket.ProtoBase" version="1.7.0.17" targetFramework="net40" />
+  <package id="Syncfusion.Licensing" version="18.2.0.54" targetFramework="net452" requireReinstallation="true" />
+  <package id="WebSocket4Net" version="0.15.2" targetFramework="net40" />
 </packages>
