--- a/Doctor/Doctor.csproj
+++ b/Doctor/Doctor.csproj
@@ -8,7 +8,7 @@
     <OutputType>WinExe</OutputType>
     <RootNamespace>Doctor</RootNamespace>
     <AssemblyName>Doctor</AssemblyName>
-    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
+    <TargetFrameworkVersion>v4.0</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <ProjectTypeGuids>{60dc8134-eba5-43b8-bcc9-bb4bc16c2548};{FAE04EC0-301F-11D3-BF4B-00C04F79EFBC}</ProjectTypeGuids>
     <WarningLevel>4</WarningLevel>
@@ -77,18 +77,6 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="AutoCompleteTextBox, Version=1.1.1.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\AutoCompleteTextBox.1.1.1\lib\net452\AutoCompleteTextBox.dll</HintPath>
-    </Reference>
-    <Reference Include="Julmar.Core">
-      <HintPath>lib\Julmar.Core.dll</HintPath>
-    </Reference>
-    <Reference Include="Julmar.Wpf.Behaviors">
-      <HintPath>lib\Julmar.Wpf.Behaviors.dll</HintPath>
-    </Reference>
-    <Reference Include="JulMar.Wpf.Helpers">
-      <HintPath>lib\JulMar.Wpf.Helpers.dll</HintPath>
-    </Reference>
     <Reference Include="log4net, Version=2.0.8.0, Culture=neutral, PublicKeyToken=669e0ddf0bb1aa2a, processorArchitecture=MSIL">
       <HintPath>..\packages\log4net.2.0.8\lib\net40-full\log4net.dll</HintPath>
     </Reference>
@@ -123,6 +111,9 @@
     <Reference Include="WindowsBase" />
     <Reference Include="PresentationCore" />
     <Reference Include="PresentationFramework" />
+    <Reference Include="WpfControls">
+      <HintPath>lib\WpfControls.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <ApplicationDefinition Include="App.xaml">
@@ -142,7 +133,7 @@
     <Compile Include="Providers\StateSuggestionProvider.cs" />
     <Compile Include="Service\CommonHelper.cs" />
     <Compile Include="Service\HttpHelper.cs" />
-    <Compile Include="Model\WSocketClient.cs" />
+    <Compile Include="Service\WSocketClient.cs" />
     <Compile Include="Model\PatientInfo.cs" />
     <Compile Include="Model\WebSocketResult.cs" />
     <Compile Include="Model\StoreTreeAcuherb.cs" />
@@ -168,9 +159,6 @@
     <Compile Include="Service\WindowsHelper.cs" />
     <Compile Include="SuspensionWindow.xaml.cs">
       <DependentUpon>SuspensionWindow.xaml</DependentUpon>
-    </Compile>
-    <Compile Include="TWindwo.xaml.cs">
-      <DependentUpon>TWindwo.xaml</DependentUpon>
     </Compile>
     <Compile Include="YpExplain.xaml.cs">
       <DependentUpon>YpExplain.xaml</DependentUpon>
@@ -203,10 +191,6 @@
       <SubType>Designer</SubType>
     </Page>
     <Page Include="SuspensionWindow.xaml">
-      <SubType>Designer</SubType>
-      <Generator>MSBuild:Compile</Generator>
-    </Page>
-    <Page Include="TWindwo.xaml">
       <SubType>Designer</SubType>
       <Generator>MSBuild:Compile</Generator>
     </Page>
